# Test_JsonCpp

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/yunshen/test_jsoncpp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  CMakeLists22.txt  main.cpp  native-lib.cpp
app/src/main/java/com/yunshen/test_jsoncpp/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/yunshen/test_jsoncpp/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
